--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_script:
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "TravisCI"
   - git config --global push.default "matching"
-#script:
-#
+script:
+  - build.sh
