--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: python
 branches:
   only:
     - main
+before_install:
+  - export TZ=America/Sao_Paulo   
 #install:
 # -  
 before_script:
-  - echo 'America/Sao_Paulo' | sudo tee /etc/timezone
-  - sudo dpkg-reconfigure --frontend noninteractive tzdata
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "TravisCI"
   - git config --global push.default "matching"
