--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ branches:
   only:
     - main
 before_install:
-  - export TZ=America/Sao_Paulo   
+  - TZ=America/Sao_Paulo   
 #install:
 # -  
 before_script:
